Update contact information with correct email and phone number

--- a/contact.html
+++ b/contact.html
@@ -34,14 +34,14 @@
                             <i class="icon">📧</i>
                             <div>
                                 <strong>Email:</strong>
-                                <p>info@ayodhyaguide.com</p>
+                                <p>abcxyzsp9@gmail.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="icon">📱</i>
                             <div>
                                 <strong>Phone:</strong>
-                                <p>+91-XXX-XXX-XXXX</p>
+                                <p>+91 9997457651</p>
                             </div>
                         </div>
                         <div class="contact-item">
