--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayodhya Guide - Explore the Holy City</title>
+    <title>Ayodhya Guide - Welcome to the Holy City</title>
+    <!-- GitHub Pages deployment trigger -->
     <meta name="description" content="Discover the sacred temples, historical sites, and cultural attractions of Ayodhya, the birthplace of Lord Rama.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="static/favicon.ico" type="image/x-icon">
@@ -71,8 +72,8 @@
                         <h4>Get in Touch</h4>
                         <p>Have questions about Ayodhya? Want to share your experience?</p>
                         <div class="contact-details">
-                            <p><strong>Email:</strong> info@ayodhyaguide.com</p>
-                            <p><strong>Phone:</strong> +91-XXX-XXX-XXXX</p>
+                                    <p><strong>Email:</strong> abcxyzsp9@gmail.com</p>
+        <p><strong>Phone:</strong> +91 9997457651</p>
                             <p><strong>Address:</strong> Ayodhya, Uttar Pradesh, India</p>
                         </div>
                     </div>
