Update Ayodhya guide with improved content and images

--- a/about.html
+++ b/about.html
@@ -111,8 +111,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Ayodhya Guide. All rights reserved.</p>
-            <p>Discover the spiritual heritage of India's holiest city</p>
+            <p>© 2025 Ayodhya Guide | Images courtesy of UP Tourism & District Ayodhya</p>
         </div>
     </footer>
 </body>
