--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Ayodhya Guide. All rights reserved.</p>
+            <p>© 2025 Ayodhya Guide | Images courtesy of UP Tourism & District Ayodhya</p>
         </div>
     </footer>
 
