--- a/index.html
+++ b/index.html
@@ -39,16 +39,6 @@
             </div>
         </section>
 
-        <section class="map-section">
-            <div class="map-container">
-                <div id="map" class="map"></div>
-                <div class="map-controls">
-                    <button id="resetMap" class="map-btn">Reset Map</button>
-                    <button id="showAll" class="map-btn">Show All</button>
-                </div>
-            </div>
-        </section>
-
         <section class="attractions-section">
             <div class="container">
                 <h3>Popular Attractions</h3>
@@ -60,6 +50,20 @@
                 </div>
                 <div id="attractionsGrid" class="attractions-grid">
                     <!-- Attractions will be loaded here dynamically -->
+                </div>
+            </div>
+        </section>
+
+        <section class="map-section">
+            <div class="container">
+                <h3>Interactive Map</h3>
+                <p class="map-description">Explore Ayodhya's sacred sites and plan your pilgrimage route</p>
+                <div class="map-container">
+                    <div id="map" class="map"></div>
+                    <div class="map-controls">
+                        <button id="resetMap" class="map-btn">Reset Map</button>
+                        <button id="showAll" class="map-btn">Show All</button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -91,8 +95,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Ayodhya Guide. All rights reserved.</p>
-            <p>Discover the spiritual heritage of India's holiest city</p>
+            <p>© 2025 Ayodhya Guide | Images courtesy of UP Tourism & District Ayodhya</p>
         </div>
     </footer>
 
